update swell php client to work with multi env

--- a/core/lib/schema-php-client/composer.json
+++ b/core/lib/schema-php-client/composer.json
@@ -1,24 +1,31 @@
 {
-	"name": "schemaio/schema-php-client",
-	"version": "1.1.0",
-	"type": "library",
-	"description": "Schema API Client for PHP",
-	"keywords": [
-		"schema", "commerce",
-		"rest", "api", "client", "node"
-	],
-	"homepage": "https://schema.io",
-	"license": "MIT",
-	"authors": [{
-		"name": "Schema and contributors",
-		"homepage": "https://github.com/schemaio/schema-php-client/contributors"
-	}],
-	"require": {
-		"php": ">=5.3.0",
-		"ext-json": "*"
-	},
-	"autoload": {
-		"classmap": ["lib/Schema/"]
-	}
-
+  "name": "swellstores/swell-php",
+  "version": "1.2.1",
+  "type": "library",
+  "description": "Swell API library for PHP",
+  "keywords": [
+    "swell",
+    "ecommerce",
+    "payments",
+    "rest",
+    "api",
+    "client"
+  ],
+  "homepage": "https://swellstores.com",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Swell and contributors",
+      "homepage": "https://github.com/swellstores/swell-php/contributors"
+    }
+  ],
+  "require": {
+    "php": ">=7.4.0",
+    "ext-json": "*"
+  },
+  "autoload": {
+    "classmap": [
+      "lib/"
+    ]
+  }
 }
